lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:6: error: not found: value y
		if (y(Liste(i))==y(Liste(i+1))) {
                    ^